Fix more overflowing content on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ a {
 }
 
 #projects h2 {
-  font-size: 60px;
+  font-size: 55px;
   max-width: 1000px;
 }
 
